pod-1.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-dev
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: dev
   template:
     metadata:
       labels:
         app: dev
     spec:
       containers:
       - name: nginx-pod
         image: 701697209736.dkr.ecr.ap-south-1.amazonaws.com/nginx
         command: ["/bin/sh"]
         args: ["-c", "echo 'Hello, this is dev  page' > usr/share/nginx/html/index.html && exec nginx -g 'daemon off;'"]
         ports:
         - containerPort: 80
   
---
apiVersion: v1
kind: Service
metadata:
  name: devsvc
spec:
  selector:
   app: dev
  ports:
  - port: 80
    targetPort: 80
