pod.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-test
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: test
   template:
     metadata:
       labels:
         app: test
     spec:
       containers:
       - name: nginx-pod
         image: 701697209736.dkr.ecr.ap-south-1.amazonaws.com/nginx
         command: ["/bin/sh"]
         args: ["-c", "echo 'Hello, this is test page' > usr/share/nginx/html/index.html && exec nginx -g 'daemon off;'"]
         ports:
         - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: testsvc
spec:
  selector:
   app: test
  ports:
  - port: 80
    targetPort: 80
